--- a/src/content/technotes/TN0013-monolith-to-federation.mdx
+++ b/src/content/technotes/TN0013-monolith-to-federation.mdx
@@ -30,6 +30,9 @@ Start the process by making a "federated graph of one". Your existing monolith c
    ```
 
 1. Deploy an instance of the [Apollo Router](/router/) to your environment.
+   > Self-hosting the Apollo Router is limited to Apollo Enterprise plans. Other plan types use [managed cloud routing with GraphOS](/graphos/routing/cloud/).
+   >
+   > [Learn about Apollo plans.](https://www.apollographql.com/pricing/)
 1. Set up [header propagation](/router/configuration/header-propagation/) so that the monolith receives any necessary headers from the router.
 1. Set up internal routing rules to redirect client requests to the Apollo Router instead of your monolith.
 1. Enable usage metrics reporting to Apollo Studio.
@@ -241,8 +244,10 @@ Start with an empty subgraph to quickly set up your deployment and continuous in
 
 ```graphql
 extend schema
-  @link(url: "https://specs.apollo.dev/federation/v2.0"
-        import: ["@shareable" "@inaccessible"])
+  @link(
+    url: "https://specs.apollo.dev/federation/v2.0"
+    import: ["@shareable", "@inaccessible"]
+  )
 
 type Query {
   _todo: String @shareable @inaccessible
