--- a/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
+++ b/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
@@ -4,6 +4,10 @@ id: TN0015
 tags: [observability, router]
 ---
 
+> Self-hosting the Apollo Router is limited to Apollo Enterprise plans. Other plan types use [managed cloud routing with GraphOS](/graphos/routing/cloud/).
+>
+> [Learn about Apollo plans.](https://www.apollographql.com/pricing/)
+
 Application performance monitoring (APM) tools are critical for many organizations, and having direct insight into how your graph is performing is an important piece of overall observability into your systems' stability and performance. The Apollo Router and subgraphs aren't any different. While you may currently instrument your existing subgraphs with your APM's tooling, you may need to connect Apollo Router as well to get a clear view of your graph's health.
 
 Thankfully, there's an answer on connecting the two pieces of software together: [OpenTelemetry](https://opentelemetry.io/). We've previously discussed utilizing [OpenTelemetry previously to connect to Prometheus](/technotes/TN0003-opentelemetry-traces-to-prometheus), and much of the same will apply to this use-case as well.
@@ -73,8 +77,8 @@ telemetry:
       endpoint: http://COLLECTOR_ADDRESS:4317
   tracing:
     trace_config:
-      service_name: "router"
-      service_namespace: "apollo"
+      service_name: 'router'
+      service_namespace: 'apollo'
     otlp:
       endpoint: http://COLLECTOR_ADDRESS:4317
 ```
@@ -98,16 +102,16 @@ telemetry:
       endpoint: https://otlp.nr-data.net
       grpc:
         metadata:
-          "api-key": ["${env.NEW_RELIC_LICENSE_KEY}"]
+          'api-key': ['${env.NEW_RELIC_LICENSE_KEY}']
   tracing:
     trace_config:
-      service_name: "router"
-      service_namespace: "apollo"
+      service_name: 'router'
+      service_namespace: 'apollo'
     otlp:
       endpoint: https://otlp.nr-data.net
       grpc:
         metadata:
-          "api-key": ["${env.NEW_RELIC_LICENSE_KEY}"]
+          'api-key': ['${env.NEW_RELIC_LICENSE_KEY}']
 ```
 
 This uses the `NEW_RELIC_LICENSE_KEY` environment variable for passing the key using the router's [variable expansion feature](/router/configuration/overview#variable-expansion) to avoid including sensitive tokens in the configuration.
