--- a/src/content/technotes/TN0016-router-resource-management.mdx
+++ b/src/content/technotes/TN0016-router-resource-management.mdx
@@ -4,6 +4,10 @@ id: TN0016
 tags: [router, best practices, kubernetes]
 ---
 
+> Self-hosting the Apollo Router is limited to Apollo Enterprise plans. Other plan types use [managed cloud routing with GraphOS](/graphos/routing/cloud/).
+>
+> [Learn about Apollo plans.](https://www.apollographql.com/pricing/)
+
 Determining the correct resource requests and limits for your application pods in a Kubernetes system is not an exact science. Your specific needs depend on many factors, including:
 
 - The cardinality of unique operation shapes
