--- a/src/content/graphos/delivery/contracts.mdx
+++ b/src/content/graphos/delivery/contracts.mdx
@@ -90,7 +90,7 @@ In Studio, each contract variant has its own README, schema reference, and Explo
 1. If you're using the `@apollo/gateway` library for your router instead of the Apollo Router:
 
    - For Federation 2 contract variants, update your gateway's `@apollo/gateway` library to version 2.0.2 or later.
-   - For Federation 1 contract variants, update your gateway's `@apollo/gateway` library to version 0. 34.0 or later.
+   - For Federation 1 contract variants, update your gateway's `@apollo/gateway` library to version 0.34.0 or later.
 
    Otherwise, you'll encounter runtime errors.
 
