--- a/src/content/graphos/delivery/contracts.mdx
+++ b/src/content/graphos/delivery/contracts.mdx
@@ -88,14 +88,14 @@ In Studio, each contract variant has its own README, schema reference, and Explo
 **Before you create any contracts:**
 
 1. If you're using the `@apollo/gateway` library for your router instead of the Apollo Router:
-    - For Federation 2 contract variants, update your gateway's `@apollo/gateway` library to version 2.
-0.2 or later.
-    - For Federation 1 contract variants, update your gateway's `@apollo/gateway` library to version 0.
-34.0 or later.
 
-    Otherwise, you'll encounter runtime errors.
+   - For Federation 2 contract variants, update your gateway's `@apollo/gateway` library to version 2.0.2 or later.
+   - For Federation 1 contract variants, update your gateway's `@apollo/gateway` library to version 0.34.0 or later.
+
+   Otherwise, you'll encounter runtime errors.
 
 2. For Federation 2 contract variants, update your Apollo Server subgraphs to use version 2.0.0 or later of the `@apollo/subgraph` library. For Federation 1 contract variants, update `@apollo/subgraph` to version 0.1.1 or later.
+
    - `@apollo/subgraph` recently replaced `@apollo/federation` for Apollo Server instances acting as subgraphs. Symbol names are unchanged.
 
 Older versions of the above libraries and tools don't fully support the required `@tag` directive.
@@ -111,7 +111,7 @@ Open the Settings page for the variant you want to use as your source variant, t
 <img
   class="screenshot"
   alt="Edit supported directives in Studio"
-  src="./img/contract-variant-settings.jpg"
+  src="../img/contract-variant-settings.jpg"
   width="600"
 />
 
