Fix some broken image URLs

--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -100,6 +100,6 @@ To check your schema against multiple variants, call `rover subgraph check` once
 
 <img
   className="screenshot"
-  src="./img/schema-checks/multi-github-check.png"
+  src="../img/schema-checks/multi-github-check.png"
   alt="Multiple service checks"
 />
