Move language column to the left

--- a/src/content/graphos/graphs/adding-a-subgraph.mdx
+++ b/src/content/graphos/graphs/adding-a-subgraph.mdx
@@ -31,16 +31,16 @@ The fastest way to create a new subgraph is to start with one of the templates p
 
 Templates are currently available for the following libraries and languages:
 
-| Name                    | Language   | ID                                 | Repo                                                                                    |
-|-------------------------|------------|------------------------------------|-----------------------------------------------------------------------------------------|
-| Go (gqlgen)             | Go         | subgraph-go-gqlgen                 | https://github.com/apollographql/subgraph-template-go-gqlgen-boilerplate                |
-| Spring GraphQL          | Java       | subgraph-java-spring-graphql       | https://github.com/apollographql/subgraph-template-java-spring-graphql-boilerplate      |
-| Apollo Server (JS)      | JavaScript | subgraph-javascript-apollo-server  | https://github.com/apollographql/subgraph-template-javascript-apollo-server-boilerplate |
-| GraphQL Kotlin          | Kotlin     | subgraph-graphql-kotlin            | https://github.com/apollographql/subgraph-template-graphql-kotlin-boilerplate           |
-| Strawberry with FastAPI | Python     | subgraph-python-strawberry-fastapi | https://github.com/strawberry-graphql/subgraph-template-strawberry-fastapi              |
-| Ariadne with FastAPI    | Python     | subgraph-python-ariadne-fastapi    | https://github.com/patrick91/subgraph-template-ariadne-fastapi                          |
-| async-graphql with Axum | Rust       | subgraph-rust-async-graphql        | https://github.com/apollographql/subgraph-template-rust-async-graphql                   |
-| Apollo Server (TS)      | TypeScript | subgraph-typescript-apollo-server  | https://github.com/apollographql/subgraph-template-typescript-apollo-server-boilerplate |
+| Language   | Name                    | ID                                 | Repo                                                                                    |
+|------------|-------------------------|------------------------------------|-----------------------------------------------------------------------------------------|
+| Go         | Go (gqlgen)             | subgraph-go-gqlgen                 | https://github.com/apollographql/subgraph-template-go-gqlgen-boilerplate                |
+| Java       | Spring GraphQL          | subgraph-java-spring-graphql       | https://github.com/apollographql/subgraph-template-java-spring-graphql-boilerplate      |
+| JavaScript | Apollo Server (JS)      | subgraph-javascript-apollo-server  | https://github.com/apollographql/subgraph-template-javascript-apollo-server-boilerplate |
+| Kotlin     | GraphQL Kotlin          | subgraph-graphql-kotlin            | https://github.com/apollographql/subgraph-template-graphql-kotlin-boilerplate           |
+| Python     | Strawberry with FastAPI | subgraph-python-strawberry-fastapi | https://github.com/strawberry-graphql/subgraph-template-strawberry-fastapi              |
+| Python     | Ariadne with FastAPI    | subgraph-python-ariadne-fastapi    | https://github.com/patrick91/subgraph-template-ariadne-fastapi                          |
+| Rust       | async-graphql with Axum | subgraph-rust-async-graphql        | https://github.com/apollographql/subgraph-template-rust-async-graphql                   |
+| TypeScript | Apollo Server (TS)      | subgraph-typescript-apollo-server  | https://github.com/apollographql/subgraph-template-typescript-apollo-server-boilerplate |
 
 You start by running `rover template use`, providing it the ID of your chosen template. For example, the following command creates a new directory called `my-subgraph` that contains the boilerplate code for a subgraph written in TypeScript using the Apollo Server library:
 
