Add links to libraries

--- a/src/content/graphos/graphs/adding-a-subgraph.mdx
+++ b/src/content/graphos/graphs/adding-a-subgraph.mdx
@@ -31,16 +31,16 @@ The fastest way to create a new subgraph is to start with one of the templates p
 
 Templates are currently available for the following libraries and languages:
 
-| Language   | Name                    | ID                                 | Repo                                                                                    |
-|------------|-------------------------|------------------------------------|-----------------------------------------------------------------------------------------|
-| Go         | Go (gqlgen)             | subgraph-go-gqlgen                 | https://github.com/apollographql/subgraph-template-go-gqlgen-boilerplate                |
-| Java       | Spring GraphQL          | subgraph-java-spring-graphql       | https://github.com/apollographql/subgraph-template-java-spring-graphql-boilerplate      |
-| JavaScript | Apollo Server (JS)      | subgraph-javascript-apollo-server  | https://github.com/apollographql/subgraph-template-javascript-apollo-server-boilerplate |
-| Kotlin     | GraphQL Kotlin          | subgraph-graphql-kotlin            | https://github.com/apollographql/subgraph-template-graphql-kotlin-boilerplate           |
-| Python     | Strawberry with FastAPI | subgraph-python-strawberry-fastapi | https://github.com/strawberry-graphql/subgraph-template-strawberry-fastapi              |
-| Python     | Ariadne with FastAPI    | subgraph-python-ariadne-fastapi    | https://github.com/patrick91/subgraph-template-ariadne-fastapi                          |
-| Rust       | async-graphql with Axum | subgraph-rust-async-graphql        | https://github.com/apollographql/subgraph-template-rust-async-graphql                   |
-| TypeScript | Apollo Server (TS)      | subgraph-typescript-apollo-server  | https://github.com/apollographql/subgraph-template-typescript-apollo-server-boilerplate |
+| Language   | Name                                                                                   | ID                                 | Repo                                                                                    |
+|------------|----------------------------------------------------------------------------------------|------------------------------------|-----------------------------------------------------------------------------------------|
+| Go         | [Go (gqlgen)](https://gqlgen.com/getting-started/)                                     | subgraph-go-gqlgen                 | https://github.com/apollographql/subgraph-template-go-gqlgen-boilerplate                |
+| Java       | [Spring GraphQL](https://spring.io/projects/spring-graphql)                            | subgraph-java-spring-graphql       | https://github.com/apollographql/subgraph-template-java-spring-graphql-boilerplate      |
+| JavaScript | [Apollo Server (JS)](https://www.apollographql.com/docs/apollo-server/)                | subgraph-javascript-apollo-server  | https://github.com/apollographql/subgraph-template-javascript-apollo-server-boilerplate |
+| Kotlin     | [GraphQL Kotlin](https://opensource.expediagroup.com/graphql-kotlin/docs/)             | subgraph-graphql-kotlin            | https://github.com/apollographql/subgraph-template-graphql-kotlin-boilerplate           |
+| Python     | [Strawberry with FastAPI](https://strawberry.rocks)                                    | subgraph-python-strawberry-fastapi | https://github.com/strawberry-graphql/subgraph-template-strawberry-fastapi              |
+| Python     | [Ariadne with FastAPI](https://ariadnegraphql.org)                                     | subgraph-python-ariadne-fastapi    | https://github.com/patrick91/subgraph-template-ariadne-fastapi                          |
+| Rust       | [async-graphql with Axum](https://async-graphql.github.io/async-graphql/en/index.html) | subgraph-rust-async-graphql        | https://github.com/apollographql/subgraph-template-rust-async-graphql                   |
+| TypeScript | [Apollo Server (TS)](https://www.apollographql.com/docs/apollo-server/)                | subgraph-typescript-apollo-server  | https://github.com/apollographql/subgraph-template-typescript-apollo-server-boilerplate |
 
 You start by running `rover template use`, providing it the ID of your chosen template. For example, the following command creates a new directory called `my-subgraph` that contains the boilerplate code for a subgraph written in TypeScript using the Apollo Server library:
 
