--- a/src/content/graphos/graphs/adding-a-subgraph.mdx
+++ b/src/content/graphos/graphs/adding-a-subgraph.mdx
@@ -57,7 +57,8 @@ When you're ready to add your new subgraph to your supergraph, [see below](#addi
 If you have an existing GraphQL API that you want to use as a subgraph, confirm whether it uses a [subgraph-compatible library](/federation/building-supergraphs/supported-subgraphs).
 
 - **If it does,** consult the library's documentation to determine how to enable its support for Apollo Federation.
-- **If it doesn't,** first move the subgraph to a compatible library.
+- **If it doesn't,** [open an issue to let us know](https://github.com/apollographql/apollo-federation-subgraph-compatibility/issues/new/choose) and we'll work with the library's maintainers to add support.
+
 ## Adding to your supergraph
 
 When you're ready to add a new subgraph to your existing GraphOS supergraph, do the following:
