Reword schema publishing
Co-authored-by: Stephen Barlow <barlow.stephen+git@gmail.com>

--- a/src/content/graphos/graphs/adding-a-subgraph.mdx
+++ b/src/content/graphos/graphs/adding-a-subgraph.mdx
@@ -68,4 +68,4 @@ When you're ready to add a new subgraph to your existing GraphOS supergraph, do 
 2. [Check your schema](/federation/managed-federation/federated-schema-checks) against your existing supergraph and handle any conflicts.
 3. Set up your CI/CD pipeline to perform checks and also [publish your subgraph schema](../../schemas/publishing).
 
-Once the schema is published—your graph is now a subgraph in your supergraph, and you can start using other federation features!
+After you publish your subgraph's schema for the first time, GraphOS recognizes it as part of your supergraph, and you can start querying your router for data from _all_ of your subgraphs!
