technotes: show all with a filter
instead of 10 most recent

--- a/src/content/technotes/index.mdx
+++ b/src/content/technotes/index.mdx
@@ -6,15 +6,9 @@ This documentation set provides technical articles on specialized topics for Apo
 
 Select a tag to view a list of articles on the corresponding topic.
 
-import {RecentNotes, TagList} from '../../components/TechNotes';
+import {AllNotes} from '../../components/TechNotes';
 
-## Recently updated
-
-<RecentNotes />
-
-## All tags
-
-<TagList />
+<AllNotes />
 
 ## Reporting issues
 
