--- a/src/content/basics/resources/product-launch-stages.mdx
+++ b/src/content/basics/resources/product-launch-stages.mdx
@@ -49,6 +49,6 @@ A **deprecated** product, feature, or open-source release is still supported by 
 
 ### End-of-life
 
-Products, features, and open-source releases that reach **end-of-life** are **no longer supported or maintained by Apollo**. They no longer receive updates, security patches, or remediation for regressions. There is no commitment from Apollo to release further versions and no guarantee that the most recent version will continue to work. End-of-life products and features are no longer generally available. End-of-life open-source releases will not be removed from their respective registries where they are published (i.e. you will still be able to install end-of-life versions of our open-source releases into your projects).
+Products, features, and open-source releases that reach **end-of-life** are **no longer supported or maintained by Apollo**. They no longer receive updates, security patches, or remediation for regressions. There is no commitment from Apollo to release further versions and no guarantee that the most recent version will continue to work. End-of-life products and features are no longer generally available. End-of-life releases which are published to a package registry (such as our open-source offerings) will not be removed from their respective registries where they are published (i.e. you will still be able to install end-of-life versions of our open-source releases into your projects). Apollo offers no guarantee that end-of-life packages will continue to function correctly with features offered in Apollo Studio.
 
-**Do not run end-of-life open-source releases in production.** Upgrade to the latest generally available release as soon as possible to ensure you continue receiving security patches, bug fixes, and new features.
+**Do not run end-of-life open-source releases in production.** Upgrade to the latest generally available release as soon as possible to ensure you continue receiving security patches, bug fixes, new features, and compatibility with Apollo Studio features.
