fix incorrect documentation

--- a/src/content/technotes/TN0004-router-authentication.mdx
+++ b/src/content/technotes/TN0004-router-authentication.mdx
@@ -30,8 +30,9 @@ To pass `Authentication` headers from client requests to your subgraphs, add the
 ```yaml
 headers:
   all:
-    - propagate:
-        named: authorization
+    request:
+     - propagate:
+          named: authorization
 ```
 
 **Pros**
