--- a/src/content/graphos/explorer/connecting-authenticating.mdx
+++ b/src/content/graphos/explorer/connecting-authenticating.mdx
@@ -199,7 +199,7 @@ Network requests are initiated from an origin of `https://preflight-request.apol
 </td>
 <td>
 
-Function that [rompt the user for input and returns the value in a promise. If the user cancels the prompt, the promise resolves to `null`.  
+Function that prompts the user for input and returns the value in a promise. If the user cancels the prompt, the promise resolves to `null`.  
 
 The prompt supports Markdown rendering of the `msg` parameter.  
 
