Docs edits for adding a subgraph from Studio UI

--- a/src/content/graphos/graphs/studio-features.mdx
+++ b/src/content/graphos/graphs/studio-features.mdx
@@ -23,7 +23,7 @@ When a user opens one of your graph's variants in Apollo Studio, its **README pa
 <img
   className="screenshot"
   alt="GraphQL codeblock in README"
-  src="./img/readme-example.jpg"
+  src="../img/readme-example.jpg"
   width="500"
 />
 
@@ -53,7 +53,7 @@ This renders the code block with buttons you can use to copy an operation or ope
 <img
   className="screenshot"
   alt="GraphQL codeblock in README"
-  src="./img/readme-codeblock.jpg"
+  src="../img/readme-codeblock.jpg"
   width="300"
 />
 
