--- a/src/content/graphos/quickstart/next-steps.mdx
+++ b/src/content/graphos/quickstart/next-steps.mdx
@@ -71,9 +71,7 @@ See [Creating a new subgraph](../graphs/creating-a-subgraph/).
 
 #### 2. Add the subgraph to your supergraph
 
-**To add a subgraph to your supergraph, you publish its schema!** This uses the exact same Rover command as [updating an _existing_ subgraph](#update-a-subgraph-schema). The only difference is that you provide the name of the _new_ subgraph to the command.
-
-[Learn about publishing subgraph schemas.](../schema/cli-registration/#subgraph-schemas)
+See [Adding a new subgraph](../graphs/federated-graphs#adding-a-new-subgraph).
 
 ### Enable federation features
 
