Add a component that replaces a placeholder with the user's real api key and graph ref, or a default string

--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -10,6 +10,8 @@ import ObtainGraphApiKey from '../../shared/obtain-graph-api-key.mdx';
 
 Both the Apollo Router and Apollo Server use the same mechanism to enable operation metrics reporting to GraphOS:
 
+<ReplaceApiKey>
+
 1. Obtain a **graph API key** from Studio.
 
    <ObtainGraphApiKey />
@@ -21,9 +23,11 @@ Both the Apollo Router and Apollo Server use the same mechanism to enable operat
 3. Use the obtained values to set the following environment variables in your environment _before_ starting up your router/server:
 
    ```bash
-   export APOLLO_KEY=<YOUR_GRAPH_API_KEY>
-   export APOLLO_GRAPH_REF=<YOUR_GRAPH_REF>
+   export APOLLO_KEY=% apiKey %
+   export APOLLO_GRAPH_REF=% graphRef %
    ```
+
+</ReplaceApiKey>
 
 > Consult your production environment's documentation to learn how to set its environment variables.
 
