--- a/src/content/graphos/graphs/overview.mdx
+++ b/src/content/graphos/graphs/overview.mdx
@@ -300,7 +300,7 @@ Each of your graph's variants is shown in Apollo Studio:
 
 ### Creating a variant
 
-To create a new variant for your graph, you [publish a schema](../schema/cli-registration) to the graph and include the variant's name in the command. If a variant with the specified name doesn't exist yet, Studio creates it!
+See [this section](./federated-graphs/#adding-a-variant).
 
 ## Publishing schemas
 
