Rename old file

--- a/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
+++ b/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
@@ -1,10 +1,10 @@
 ---
-title: Testing in a federated architecture
+title: Testing with Apollo Federation
 id: TN0007
-tags: [server, router, testing]
+tags: [server, federation, testing]
 ---
 
-Comprehensively testing a federated supergraph requires all of the following:
+Testing a federated supergraph requires all the following:
 
 - [Composition testing](#composition-testing) for supergraph schema generation
 - [Unit testing](#unit-testing) in individual subgraphs
